updated css and js links

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,17 @@
 <!-- Favicons --> 
 <link rel="shortcut icon" href="images/favicon.ico">
 
-<!-- Stylesheets -->
-<link href="css/styles.css" rel="stylesheet">
+<!--style sheets-->
+<!--main stylesheet-->
+<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+<!--responsive stylesheet-->
+<link rel="stylesheet" type="text/css" href="stylesheets/responsive.css">
+<!--reset stylesheet-->
+<link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
+<!--end stylesheet-->
+<!--javascript main-->
+<script type="text/javascript" src="javascript/main.js"></script>
+<!--end javascript-->
 
 </head>
 <!-- designing the page with bootstrap -->
