--- a/resources/map.html
+++ b/resources/map.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
-    <meta name="viewport" content="initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <title>Simple markers</title>
     <style>
       html, body {
         height: 100%;
@@ -11,23 +11,59 @@
         padding: 0;
       }
       #map {
-        width: 800px;
-        height: 1000px;
+        width: 400px;
+        height: 400px;
+        float: right;
       }
     </style>
   </head>
-  <body>
-    <div id="map"></div>
-    <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 43.194410, lng: -71.585948},
-          zoom: 13
-        });
-      }
+  <div id="map"></div>
+  <script>
+    function initMap() {
+      var hooksett = new google.maps.LatLng(43.0967, -71.4651);
+      var map = new google.maps.Map(document.getElementById('map'), {
+        center: hooksett,
+        zoom: 13
+      });
+      var coordInfoWindow = new google.maps.InfoWindow();
+      coordInfoWindow.setContent(createInfoWindowContent(hooksett, map.getZoom()));
+      coordInfoWindow.setPosition(hooksett);
+      coordInfoWindow.open(map);
+      map.addListener('zoom_changed', function() {
+        coordInfoWindow.setContent(createInfoWindowContent(hooksett, map.getZoom()));
+        coordInfoWindow.open(map);
+      });
+    }
+    var TILE_SIZE = 256;
+    function createInfoWindowContent(latLng, zoom) {
+      var scale = 1 << zoom;
+      var worldCoordinate = project(latLng);
+      var pixelCoordinate = new google.maps.Point(
+          Math.floor(worldCoordinate.x * scale),
+          Math.floor(worldCoordinate.y * scale));
+      var tileCoordinate = new google.maps.Point(
+          Math.floor(worldCoordinate.x * scale / TILE_SIZE),
+          Math.floor(worldCoordinate.y * scale / TILE_SIZE));
+      return [
+        'King Oak College',
+        'Hooksett, NH',
+
+      ].join('<br>');
+    }
+    // The mapping between latitude, longitude and pixels is defined by the web
+    // mercator projection.
+    function project(latLng) {
+      var siny = Math.sin(latLng.lat() * Math.PI / 180);
+
+      // Truncating to 0.9999 effectively limits latitude to 89.189. This is
+      // about a third of a tile past the edge of the world tile.
+      siny = Math.min(Math.max(siny, -0.9999), 0.9999);
+      return new google.maps.Point(
+          TILE_SIZE * (0.5 + latLng.lng() / 360),
+          TILE_SIZE * (0.5 - Math.log((1 + siny) / (1 - siny)) / (4 * Math.PI)));
+    }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXVzyNaJsKloL3tgftberAPXNMFFoWYKw&callback=initMap"
     async defer></script>
-  </body>
-</html>
+    </body>
+    </html>
