--- a/public/student_life.html
+++ b/public/student_life.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
 <!--javascript main-->
 <script type="text/javascript" src="javascript/main.js"></script>
+<!--end javascript-->
 </head>
 
 <body>
