--- a/resources/coverr_vid_coding/coverr.html
+++ b/resources/coverr_vid_coding/coverr.html
@@ -5,45 +5,25 @@
 <!--style sheets-->
 <!--main stylesheet-->
 <link rel="stylesheet" type="text/css" href="css/coverr.css">
-<!--javascript main-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-<!--end javascript-->
-
-</head>
-
 
 <body>
-
-
 <h1>Hello world</h1>
 <div class="homepage-hero-module">
     <div class="video-container">
         <div class="filter"></div>
         <video autoplay loop class="fillWidth">
             <source src="vid/For_Wes.mp4" type="video/mp4"/>
-            <source src="vid/For_Wes.webm" type="video/webm/>
+            <source src="vid/For_Wes.webm" type="video/webm"/>
         </video>
         <div class=" poster hidden">
             <img src="vid/For_Wes.jpg" alt="typing">
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!--javascript main-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<!--end javascript-->
+</head>
 <script type="text/javascript" src="js/coverr.js"></script>
-
 </body>
 </html>
