fonts and linked

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,10 @@
 <link rel="stylesheet" type="text/css" href="stylesheets/responsive.css">
 <!--reset stylesheet-->
 <link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
-<!--end stylesheet-->
+<!-- fonts stylesheer-->
+<link rel="stylesheet" type="text/css" href="stylesheets/fonts/fonts.css">
+<!-- font awesome stylesheer-->
+<link rel="stylesheet" type="text/css" href="stylesheets/font-awesome.min">
 <!--javascript main-->
 <script type="text/javascript" src="javascript/main.js"></script>
 <!--end javascript-->
